--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,26 @@ html {
 body {
     font-size: 1.8rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 4fr;
+}
+
+.sidebar {
+    background-color: rgb(39, 119, 184);
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.header {
+    background-color: rgb(246, 251, 251);
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.mainContent {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
