--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,39 @@
     border: 1px solid black;
 }
 
+/* SIDEBAR BEGINS HERE */
+.sidebarTitle {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr;
+    grid-row: 1 / 2;
+}
+.sidebarUL1 {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: repeat(6, 1fr); /* Make Dashboard cell bigger? */
+    grid-row: 3 / 4;
+}
+.sidebarUL2 {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-row: 5 / 6;
+}
+
+.sidebar>ul>li {
+    list-style-type: none;
+    grid-column: 2;
+}
+.sidebar>ul>img {
+    grid-column: 1;
+}
+/* SIDEBAR ENDS HERE */
+
 html {
-    background-color: rgb(150, 150, 150);
+    background-color: rgb(200, 200, 200);
     font-size: 62.5%; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -16,20 +46,27 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
+    height: 100vh;
+    width: 100vw;
 }
 
 .sidebar {
     background-color: rgb(39, 119, 184);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    z-index: 2;
+    display: grid;
+    align-items: start;
+    
 }
 
 .header {
     background-color: rgb(246, 251, 251);
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    box-shadow: 1px 2px 20px 1px rgba(50, 50, 50, 0.5);
 }
 
 .mainContent {
