--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,29 @@
     border: 1px solid black;
 }
 
+html {
+    background-color: rgb(200, 200, 200);
+    font-size: 62.5%; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    font-size: 1.8rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+}
+
+li {
+    list-style-type: none;
+}
+
 /* SIDEBAR BEGINS HERE */
+
+.sidebarContents {
+    display: grid;
+    height: 50%;
+    /* grid-template-rows: auto minmax(10%, 11%) auto minmax(10%, 11%) auto; */
+    row-gap: 10%;
+}
+
 .sidebarTitle {
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -25,24 +47,15 @@
     grid-row: 5 / 6;
 }
 
-.sidebar>ul>li {
+/* .sidebar>ul>li {
     list-style-type: none;
     grid-column: 2;
 }
 .sidebar>ul>img {
     grid-column: 1;
-}
+} */
+
 /* SIDEBAR ENDS HERE */
-
-html {
-    background-color: rgb(200, 200, 200);
-    font-size: 62.5%; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body {
-    font-size: 1.8rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
-}
 
 .container {
     display: grid;
@@ -57,9 +70,7 @@ body {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     z-index: 2;
-    display: grid;
-    align-items: start;
-    
+    display: grid;   
 }
 
 .header {
