--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,15 @@
 
 html {
     background-color: rgb(200, 200, 200);
-    font-size: 62.5%; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 62.5%;
+    /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
 }
 
 body {
-    font-size: 1.8rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    font-size: calc(1.5rem + 0.4vw);
+    /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    /* FONTSIZE - Adding the 0.4 is for responsivity */
 }
 
 li {
@@ -23,43 +26,40 @@ li {
 
 .sidebarContents {
     display: grid;
-    height: 50%;
+    background-color: rgba(50, 50, 50, 0.4);
     /* grid-template-rows: auto minmax(10%, 11%) auto minmax(10%, 11%) auto; */
     row-gap: 10%;
+    min-height:100vh;
+    padding-bottom: 90%;
 }
 
 .sidebarTitle {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr;
-    grid-row: 1 / 2;
+    /* grid-template-rows: 1fr; */
+    /* grid-row: 1 / 2; */
+    column-gap: 10%;
 }
 .sidebarUL1 {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: repeat(6, 1fr); /* Make Dashboard cell bigger? */
-    grid-row: 3 / 4;
+    /* grid-template-rows: repeat(6, auto-fit); */
+    /* grid-row: 3 / 4; */
+    column-gap: 10%;
 }
 .sidebarUL2 {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-row: 5 / 6;
+    /* grid-template-rows: repeat(3, 1fr); */
+    /* grid-row: 5 / 6; */
+    column-gap: 10%;
 }
-
-/* .sidebar>ul>li {
-    list-style-type: none;
-    grid-column: 2;
-}
-.sidebar>ul>img {
-    grid-column: 1;
-} */
 
 /* SIDEBAR ENDS HERE */
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 4fr;
     height: 100vh;
     width: 100vw;
@@ -70,7 +70,10 @@ li {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     z-index: 2;
-    display: grid;   
+    
+    /* grid-template-rows: repeat(5, 1fr);
+    padding-bottom: 70%;
+    row-gap: 2rem; */
 }
 
 .header {
