--- a/styles.css
+++ b/styles.css
@@ -34,38 +34,30 @@ img {
     z-index: 2;
     display:grid;
     align-content: start;
-   
     row-gap: 10%;
 }
 
+.sidebarTitle, .sidebarUL1, .sidebarUL2 {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    column-gap: 10%;
+    
+    align-items: center;
+    padding-left: 5%;
+    
+}
 
 /* ---------  CURRENTLY NOT BEING USED ------------- */
-.sidebarContents {
+/* .sidebarContents {
     display: grid;
     background-color: rgba(50, 50, 50, 0.4);
     /* grid-template-rows: auto minmax(10%, 11%) auto minmax(10%, 11%) auto; */
-    row-gap: 10%;
+    /*row-gap: 10%;
     min-height:100%;
     padding-bottom: 100%;
-}
+} */
 /* ---------  CURRENTLY NOT BEING USED ------------- */
 
-
-.sidebarTitle {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    column-gap: 10%;
-}
-.sidebarUL1 {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    column-gap: 10%;
-}
-.sidebarUL2 {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    column-gap: 10%;
-}
 /* SIDEBAR ENDS HERE */
 
 .container {
