--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
 html {
@@ -10,6 +10,8 @@ html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 62.5%;
     /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    min-height: 100vh;
+    max-height: 100vh;
     
 }
 
@@ -41,15 +43,35 @@ img, svg {
     row-gap: 5rem;
     padding-left: 3rem;
     padding-top: 2rem;
+
 }
 
 .sidebarTitle, .sidebarUL1, .sidebarUL2 {
     display: grid;
     grid-template-columns: 1fr 5fr;
     column-gap: 10%;
+    
     row-gap: 2rem;
     align-items: center;
 }
+
+/*------------- MEDIA QUERIES ------------- */
+
+@media only screen and (max-width: 1024px){
+    .sidebar li, strong {
+        display: none;
+    }
+    .sidebarTitle, .sidebarUL1, .sidebarUL2 {
+        grid-template-columns: 1fr;
+             
+    }
+    .sidebar {
+        padding: 2rem;
+        
+    }
+    
+}
+/*------------- MEDIA QUERIES ------------- */
 
 strong {
     font-size:xx-large;
@@ -58,7 +80,7 @@ strong {
 
 .container {
     display: grid;
-    grid-template-columns: 35rem 5fr; /*making this first col fixed means img wont auto resize*/
+    grid-template-columns: max-content 5fr; /*making this first col fixed means img wont auto resize*/
     grid-template-rows: 1fr 4fr;
     height: 100vh;
     width: 100vw;
@@ -76,9 +98,17 @@ strong {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     display: grid;
+    gap: 1rem;
+    grid-template-columns: auto minmax(20rem, 45rem);
 }
 
-.mainContent img {
-    padding-top: 2rem;
-    max-width: 50vw;
+section {
+    display:grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 3fr))
+}
+
+#trending, #announcements {
+    display: grid;
+    gap: 2rem;
 }
