add spacing to right column

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 html {
@@ -98,7 +98,9 @@ strong {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
+    padding: 2rem;
+    max-width: 100vw;
     grid-template-columns: auto minmax(20rem, 45rem);
 }
 
@@ -106,6 +108,12 @@ section {
     display:grid;
     gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(30rem, 3fr))
+}
+
+.mainRight {
+    display: grid;
+    gap: 8rem;
+    align-content: start;
 }
 
 #trending, #announcements {
