--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ strong {
 
 img, svg {
     display: block;
-    max-width: 80%;
+    max-width: 100%;
 }
 /* ---------------------------------------------------- */
 /*--------------- SIDEBAR BEGINS HERE------------------ */
@@ -44,9 +44,8 @@ img, svg {
     display:grid;
     align-content: start;
     row-gap: 5rem;
-    padding-left: 3rem;
+    padding-left: 2rem;
     padding-top: 2rem;
-
 }
 
 .sidebarTitle, .sidebarUL1, .sidebarUL2 {
@@ -83,12 +82,11 @@ img, svg {
 
 .container {
     display: grid;
-    grid-template-columns: max-content 5fr; /*making this first col fixed means img wont auto resize*/
+    grid-template-columns: max-content minmax(64rem, 5fr); /*making this first col fixed means img wont auto resize*/
     grid-template-rows: 1fr 4fr;
-    height: 100vh;
-    width: 100vw;
-    
-}
+    max-height: 100vh;
+    max-width: 100vw;
+    }
 
 .mainContent {
     grid-column: 2 / 3;
@@ -97,13 +95,13 @@ img, svg {
     gap: 2rem;
     padding: 2rem;
     max-width: 100vw;
-    grid-template-columns: auto minmax(20rem, 45rem);
+    grid-template-columns: 1fr 32rem;
 }
 
 section {
     display:grid;
     gap: 2rem;
-    grid-template-columns: repeat(auto-fill, minmax(30rem, 3fr))
+    grid-template-columns: repeat(auto-fill, minmax(32rem, 3fr))
 }
 
 .mainRightDiv {
@@ -112,13 +110,13 @@ section {
     align-content: start;
 }
 
-#trending, #announcements {
+.mainRightDiv .card div{
     display: grid;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 hr {
-    margin-top: 2rem;
+    margin-top: 1rem;
     opacity: 0.5;
 }
 
@@ -129,11 +127,11 @@ hr {
     border-radius: 8px;
     padding: 2rem;
     display: grid;
+    gap: 1rem;
 }
 
 .cards .card {
     border-left: 1rem solid rgb(208, 160, 69);
-    gap: 1rem;
 }
 
 .card img {
@@ -156,8 +154,9 @@ hr {
     grid-row: 1 / 2;
     box-shadow: 1px 2px 20px 1px rgba(50, 50, 50, 0.5);
     display: grid;
+    min-height: 18.8rem;
     grid-template-rows: 9.4rem 9.4rem;
-    grid-template-columns: 1fr 36rem;
+    grid-template-columns: 1fr 32rem;
 }
 
 .head1, .head2, .head3, .head4 {
@@ -169,8 +168,8 @@ hr {
 }
 
 .head2, .head4 {
-    width: 100%;
-    margin: auto;
+    width: 100%;    
+    padding-right: 3ch;
 }
 
 form {
@@ -178,8 +177,10 @@ form {
     display: grid;
     grid-template-columns: 4rem 1fr;
     gap: 2rem;
-    padding: 0 2rem;
+    padding: 0 4rem;
     width: 100%;
+    max-width: 100rem;
+    margin-right: auto;
 }
 
 form button {
@@ -195,7 +196,7 @@ input {
     border-color: transparent;
     border-radius: 40rem;
     padding-left: 2ch;
-    width: 90%;
+    width: 100%;
     background-color: rgba(128, 128, 128, 0.1);
 }
 
@@ -220,8 +221,22 @@ input {
     background-color: rgb(32, 96, 147);
 }
 
-.head3 p {
-    
+.head3 strong{
+    display: block;
+}
+
+.head3 img {
+    min-width: 80px;
+}
+
+.head3 {
+    max-width: 32rem;
+    padding-left: 4rem;
+}
+
+img[src$=".jpg"] {
+    border-radius: 50%;
+    border: 1px solid black;    
 }
 
 /* ------------------- HEADER SECTION --------------  */
