--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,31 @@ html {
 
 body {
     font-size: 2rem;
-    /* font-size: calc(1.5rem + 0.3vw); */
+    /* font-size: calc(1.5rem + 0.4vw); */
     /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
     /* FONTSIZE - Adding the 0.4 is for responsivity */    
 }
 
 li {
     list-style-type: none;
+    display: inline-block;
+}
+
+li img {
+    display: inline-block;
+}
+
+a {
+    text-decoration: none;
+    color:initial;
 }
 
 strong {
     font-size:xx-large;
+}
+
+button {
+    cursor:pointer;
 }
 
 img, svg {
@@ -101,7 +115,8 @@ img, svg {
 section {
     display:grid;
     gap: 2rem;
-    grid-template-columns: repeat(auto-fill, minmax(32rem, 3fr))
+    grid-template-columns: repeat(auto-fill, minmax(32rem, 3fr));
+   
 }
 
 .mainRightDiv {
@@ -132,6 +147,7 @@ hr {
 
 .cards .card {
     border-left: 1rem solid rgb(208, 160, 69);
+    max-height: 35rem;
 }
 
 .card img {
