--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* outline: 1px solid black; */
+    outline: 1px solid pink;
 }
 
 html {
@@ -43,11 +43,6 @@ strong {
 
 button {
     cursor:pointer;
-}
-
-img, svg {
-    display: block;
-    max-width: 100%;
 }
 /* ---------------------------------------------------- */
 /*--------------- SIDEBAR BEGINS HERE------------------ */
@@ -122,6 +117,11 @@ section {
     /* REDUCED MIN SIZE FOR BACKUP OVERFLOW CORRECTION */
 }
 
+.mainContH5 {
+    font-size: 2.5rem;
+    padding-bottom: 1rem;
+}
+
 .mainRightDiv {
     display: grid;
     gap: 5rem;
@@ -138,6 +138,18 @@ hr {
     opacity: 0.5;
 }
 
+.trending {
+    display: grid;
+    grid-template-columns: 1fr 70%;
+    grid-template-rows: 1fr;
+}
+
+.trendAvatar {
+    border-radius: 50%;
+    min-width: 60px;
+    margin: auto;
+}
+
 /* ---------------- CARDS --------------  */
 .card {
     background-color: aliceblue;
@@ -148,7 +160,7 @@ hr {
     gap: 1rem;
 }
 
-.cards .card {
+section .card {
     border-left: 1rem solid rgb(208, 160, 69);
     max-height: 35rem;
 }
