added color variables

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /*outline: 1px solid pink;*/
+    outline: 1px solid pink;
 }
 
 html {
@@ -19,7 +21,12 @@ body {
     font-size: 2rem;
     /* font-size: calc(1.5rem + 0.4vw); */
     /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
-    /* FONTSIZE - Adding the 0.4 is for responsivity */    
+    /* FONTSIZE - Adding the 0.4 is for responsivity */
+}
+
+:root {
+    --sidebarColor: rgb(39, 119, 184);
+    --boxshadow: rgba(50, 50, 50, 0.5);
 }
 
 li {
@@ -27,38 +34,36 @@ li {
     display: inline-block;
 }
 
-li img {
-    display: inline-block;
-}
-
 a {
     text-decoration: none;
-    color:initial;
+    color: initial;
 }
 
 strong {
-    font-size:xx-large;
+    font-size: xx-large;
     display: block;
 }
 
 button {
-    cursor:pointer;
+    cursor: pointer;
 }
+
 /* ---------------------------------------------------- */
 /*--------------- SIDEBAR BEGINS HERE------------------ */
 .sidebar {
-    background-color: rgb(39, 119, 184);
+    background-color: var(--sidebarColor);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     z-index: 2;
-    display:grid;
+    display: grid;
     align-content: start;
     padding-left: 2rem;
     padding-right: 2rem;
 }
 
-.stickySide { /* This is a wrapper for the 'sticky' positioning */
-    display:grid;
+.stickySide {
+    /* This is a wrapper for the 'sticky' positioning container*/
+    display: grid;
     align-content: start;
     row-gap: 6rem;
     position: sticky;
@@ -66,10 +71,12 @@ button {
     padding-top: 3rem;
 }
 
-.sidebarTitle, .sidebarUL1, .sidebarUL2 {
+.sidebarTitle,
+.sidebarUL1,
+.sidebarUL2 {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    column-gap: 10%;    
+    column-gap: 10%;
     row-gap: 2rem;
     align-items: center;
 }
@@ -80,25 +87,32 @@ button {
 /* -------------------------------------------------- */
 /*------------------- MEDIA QUERIES ----------------- */
 
-@media only screen and (max-width: 1024px){
-    .sidebar li, .sidebar strong {
+@media only screen and (max-width: 1024px) {
+
+    .sidebar li,
+    .sidebar strong {
         display: none;
     }
-    .sidebarTitle, .sidebarUL1, .sidebarUL2 {
+
+    .sidebarTitle,
+    .sidebarUL1,
+    .sidebarUL2 {
         grid-template-columns: 1fr;
-             
-    }    
+
+    }
 }
+
 /*------------- MEDIA QUERIES END HERE--------------- */
 /* -------------------------------------------------- */
 
 .container {
     display: grid;
-    grid-template-columns: max-content minmax(64rem, 5fr); /*making this first col fixed means img wont auto resize*/
+    grid-template-columns: max-content minmax(64rem, 5fr);
+    /*making this first col fixed means img wont auto resize*/
     grid-template-rows: 1fr 4fr;
     max-height: 100vh;
     max-width: 100vw;
-    }
+}
 
 .mainContent {
     grid-column: 2 / 3;
@@ -111,7 +125,7 @@ button {
 }
 
 section {
-    display:grid;
+    display: grid;
     gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(30rem, 3fr));
     /* REDUCED MIN SIZE FOR BACKUP OVERFLOW CORRECTION */
@@ -128,7 +142,7 @@ section {
     align-content: start;
 }
 
-.mainRightDiv .card div{
+.mainRightDiv .card div {
     display: grid;
     gap: 1rem;
 }
@@ -172,8 +186,9 @@ section .card {
 }
 
 .cardIcons {
-   justify-self: end;   
+    justify-self: end;
 }
+
 /* ---------------- CARDS ---------------  */
 
 
@@ -190,15 +205,19 @@ section .card {
     grid-template-columns: 1fr 30rem;
 }
 
-.head1, .head2, .head3, .head4 {
+.head1,
+.head2,
+.head3,
+.head4 {
     display: grid;
     place-items: center;
     grid-template: 1fr / 1fr 1fr 1fr;
     gap: 1rem;
 }
 
-.head2, .head4 {
-    width: 100%;    
+.head2,
+.head4 {
+    width: 100%;
     padding-right: 2rem;
     gap: 2rem;
     margin-left: -4rem;
@@ -233,9 +252,9 @@ input {
 }
 
 .head4 button {
-    background-color: rgb(39, 119, 184);
+    background-color: var(--sidebarColor);
     border-color: transparent;
-    font-size:1.5rem;
+    font-size: 1.5rem;
     letter-spacing: 0.1rem;
     color: white;
     border-radius: 22px;
@@ -244,16 +263,16 @@ input {
 }
 
 .head4 button:hover {
-    background-color: rgb(32, 96, 147);
-    box-shadow:1px 1px 1px 1px rgb(50,50,50,0.5);
+    background-color: var(--sidebarColor);
+    box-shadow: 1px 1px 1px 1px rgb(50, 50, 50, 0.5);
 }
 
 .head4 button:active {
     transform: translateY(1px);
-    background-color: rgb(32, 96, 147);
+    background-color: var(--sidebarColor);
 }
 
-.head3 strong{
+.head3 strong {
     display: block;
 }
 
@@ -272,7 +291,7 @@ input {
 
 img[src$=".jpg"] {
     border-radius: 50%;
-    border: 1px solid black;    
+    border: 1px solid black;
 }
 
 /* ------------------- HEADER SECTION --------------  */
