--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,7 @@ button {
     gap: 2rem;
     padding: 2rem;
     flex-wrap: wrap-reverse;
+ 
 }
 
 .mainContentH5 {
@@ -132,20 +133,21 @@ section {
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(30rem, 3fr));
+
 }
 
 
 /* THESE WIDTHS CONTROL "RESPONSIVITY" OF FLEX AREA, DELICATE TWEAKING REQUIRED */
 #mainLeftDiv {
     flex: 1 1 auto;
-    width: clamp(32rem, 50%, 100%);
+    width: clamp(34rem, 50%, 100%);
 }
 #mainRightDiv {
     display: grid;
     gap: 5rem;
     align-content: start;
     flex: 1 0 30rem;
-    width: clamp(30rem, 30rem, 30rem);
+max-width: 40rem;
 }
 /* THESE WIDTHS CONTROL "RESPONSIVITY" OF FLEX AREA, DELICATE TWEAKING REQUIRED */
 
@@ -185,6 +187,7 @@ hr {
 section .card {
     border-left: 1rem solid rgb(208, 160, 69);
     max-height: 35rem;
+    max-width: 48rem;
 }
 
 .card img {
@@ -203,7 +206,7 @@ section .card {
 /* -------------------------------------------------- */
 /* ------------------- HEADER SECTION ---------------  */
 .header {
-    background-color: rgb(246, 251, 251);
+    background-color: aliceblue;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     box-shadow: 1px 2px 20px 1px rgba(50, 50, 50, 0.5);
